<resources>
    <string name="app_name">Passwordy</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_length">Password length</string>
    <string name="lowercase_letters_a_z">Lowercase letters (a&#8211;z)</string>
    <string name="uppercase_letters_a_z">Uppercase letters (A&#8211;Z)</string>
    <string name="digits_0_9">Digits (0&#8211;9)</string>
    <string name="special_characters"><![CDATA[Special characters (@!$%#&)]]></string>
    <string name="generate">Generate</string>
    <string name="save_password">Save Password</string>
    <string name="copy_password_to_clipboard">Copy password to clipboard</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="website_application">Website/Application</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="continue_">Continue</string>
    <string name="biometric_auth_title">Authenticate</string>
    <string name="biometric_auth_description">Confirm your identity to continue</string>
    <string name="biometric_auth_message">To access your saved passwords you need to confirm your identity</string>
    <string name="saved_passwords">Saved Passwords</string>
    <string name="add_password">Add Password</string>
    <string name="passwords_empty_state_text">You don\'t have any saved passwords!</string>
    <string name="delete_password">Delete password</string>
    <string name="edit_password">Edit Password</string>
    <string name="password_saved_successfully">Password saved successfully!</string>
</resources>