<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature_password.presentation.home.HomeFragment">

        <Button
            android:id="@+id/generate_button"
            style="@style/MainButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/generate_password"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/show_button"
            app:layout_constraintEnd_toStartOf="@id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_button"
            style="@style/MainButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.1"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/add_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/generate_button"
            app:layout_constraintTop_toTopOf="@id/generate_button"
            app:layout_constraintBottom_toBottomOf="@id/generate_button" />

        <Button
            android:id="@+id/show_button"
            style="@style/MainButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.1"
            android:text="@string/saved_passwords"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/generate_button"
            app:layout_constraintEnd_toEndOf="@id/generate_button"
            app:layout_constraintTop_toBottomOf="@id/generate_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>