<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.github.aayman93.passwordy.feature_password.presentation.generate_password.GeneratePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background_color"
        tools:context=".feature_password.presentation.generate_password.GeneratePasswordFragment">

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/generate_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_password"
            android:elevation="30dp"
            android:gravity="center"
            android:text="@{viewModel.state.password}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintTop_toBottomOf="@id/screen_title"
            tools:text="Fd5$ksl5ak5aSS5a!s" />

        <TextView
            android:id="@+id/password_length_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/password_length"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <com.google.android.material.slider.Slider
            android:id="@+id/password_length_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            android:stepSize="1"
            android:value="8"
            android:valueFrom="4"
            android:valueTo="20"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toBottomOf="@id/password_length_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password_length_label"
            app:layout_constraintTop_toTopOf="@id/password_length_label"
            app:onValueChanges="@{(value) -> viewModel.onSliderValueChanged(value)}"
            app:thumbColor="@color/white"
            app:thumbStrokeColor="#1f202a"
            app:thumbStrokeWidth="1dp"
            app:tickVisible="false"
            app:trackColorActive="#4b79fa"
            app:trackColorInactive="#1f2531"
            app:trackHeight="20dp" />

        <TextView
            android:id="@+id/password_length_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:text="@{viewModel.state.passwordLength + ``}"
            app:layout_constraintBaseline_toBaselineOf="@id/password_length_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="20" />

        <CheckBox
            android:id="@+id/include_lowercase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="@={viewModel.state.includeLowercase}"
            android:drawableEnd="@drawable/checkbox_selector"
            android:text="@string/lowercase_letters_a_z"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_length_seek_bar"
            tools:checked="true" />

        <CheckBox
            android:id="@+id/include_uppercase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="@={viewModel.state.includeUppercase}"
            android:drawableEnd="@drawable/checkbox_selector"
            android:text="@string/uppercase_letters_a_z"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_lowercase"
            tools:checked="false" />

        <CheckBox
            android:id="@+id/include_digits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="@={viewModel.state.includeDigits}"
            android:drawableEnd="@drawable/checkbox_selector"
            android:text="@string/digits_0_9"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_uppercase"
            tools:checked="true" />

        <CheckBox
            android:id="@+id/include_special_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="@={viewModel.state.includeSpecialCharacters}"
            android:drawableEnd="@drawable/checkbox_selector"
            android:text="@string/special_characters"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_digits"
            tools:checked="false" />

        <Button
            android:id="@+id/generate_button"
            style="@style/MainButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/generate_password"
            android:text="@string/generate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/copy_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_special_characters"
            app:layout_constraintVertical_bias="1.0"
            app:layout_goneMarginEnd="16dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/copy_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_rounded_buttons"
            android:clickable="true"
            android:contentDescription="@string/copy_password_to_clipboard"
            android:elevation="4dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_copy"
            android:visibility="@{viewModel.state.password.empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/generate_button"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toEndOf="@id/generate_button"
            app:layout_constraintTop_toTopOf="@id/generate_button"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/save_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_rounded_buttons"
            android:clickable="true"
            android:contentDescription="@string/save_password"
            android:elevation="4dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_save"
            android:visibility="@{viewModel.state.password.empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/generate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/copy_button"
            app:layout_constraintTop_toTopOf="@id/generate_button"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>