<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.aayman93.passwordy.feature_password.presentation.save_password.SavePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".feature_password.presentation.save_password.SavePasswordFragment">

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/screen_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:labelFor="@id/email_field"
                    android:text="@string/email"
                    android:textColor="@color/label_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    style="@style/CustomInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:theme="@style/CustomInputLayoutStyle"
                    app:errorText="@{viewModel.state.emailError}"
                    app:layout_constraintTop_toBottomOf="@id/email_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_field"
                        style="@style/CustomTextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.state.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@id/username_field"
                    android:text="@string/username"
                    android:textColor="@color/label_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_input_layout"
                    style="@style/CustomInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:theme="@style/CustomInputLayoutStyle"
                    app:layout_constraintTop_toBottomOf="@id/username_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_field"
                        style="@style/CustomTextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textShortMessage"
                        android:text="@={viewModel.state.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@id/phone_field"
                    android:text="@string/phone"
                    android:textColor="@color/label_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username_input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_input_layout"
                    style="@style/CustomInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:theme="@style/CustomInputLayoutStyle"
                    app:layout_constraintTop_toBottomOf="@id/phone_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_field"
                        style="@style/CustomTextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:text="@={viewModel.state.phone}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/website_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@id/website_field"
                    android:text="@string/website_application"
                    android:textColor="@color/label_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/website_input_layout"
                    style="@style/CustomInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:theme="@style/CustomInputLayoutStyle"
                    app:errorText="@{viewModel.state.websiteError}"
                    app:layout_constraintTop_toBottomOf="@id/website_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/website_field"
                        style="@style/CustomTextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textWebEmailAddress"
                        android:text="@={viewModel.state.website}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@id/password_field"
                    android:text="@string/password"
                    android:textColor="@color/label_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/website_input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    style="@style/CustomInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:theme="@style/CustomInputLayoutStyle"
                    app:endIconMode="password_toggle"
                    app:errorText="@{viewModel.state.passwordError}"
                    app:layout_constraintTop_toBottomOf="@id/password_label"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_field"
                        style="@style/CustomTextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:text="@={viewModel.state.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_button"
                    style="@style/MainButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="@string/save_password"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_input_layout"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>